[package]
name = "anatomy-of-stark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
once_cell = "1.19.0"
primitive-types = "0.12.2"
serde = { version="1.0.198", features=["derive"] }
serde-pickle = "1.1.1"
sha3 = "0.10.8"
